# comseba

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: smoke_test.py
src/comseba/: __init__.py  __main__.py  cli.py  client.py  criteria_extractor.py  hwp_parser.py  image_parser.py  level.py  model_answer_generator.py  profile_builder.py  report_generator.py  sms_generator.py  storage.py  subject.py  submission_evaluator.py  suggestion_engine.py
tests/: conftest.py  test_acceptance_criteria.py  test_cli.py  test_criteria_extractor.py  test_hwp_parser.py  test_image_parser.py  test_level.py  test_level_integration.py  test_model_answer_generator.py  test_profile_builder.py  test_report_generator.py  test_sms_generator.py  test_storage.py  test_subject.py  test_subject_integration.py  test_submission_evaluator.py  test_suggestion_engine.py
